menu trigger aligend correctly, footer visible on front page

--- a/css/app.css
+++ b/css/app.css
@@ -2939,6 +2939,9 @@ h6 {
     -ms-transform: scale(0.89);
     -o-transform: scale(0.89);
     transform: scale(0.89); }
+.home footer {
+  position: fixed;
+  bottom: 0; }
 
 .intro-layout {
   display: inline-block;
@@ -3652,32 +3655,29 @@ h6 {
   left: 20px;
   z-index: 4;
   pointer-events: auto;
-  font-family: nexa_lightregular, sans-serif;
+  font-family: nexa_lightregular, Helvetica, Arial, sans-serif;
   font-size: 2em;
   visibility: hidden;
   -webkit-transition-duration: 0.5s;
   -moz-transition-duration: 0.5s;
   transition-duration: 0.5s; }
-  .menu-trigger:before {
-    content: "\f46a";
+  .menu-trigger:before, .menu-trigger:after {
     font-family: Ionicons;
     position: absolute;
+    line-height: 1.25;
+    -webkit-transition-duration: 0.5s;
+    -moz-transition-duration: 0.5s;
+    transition-duration: 0.5s; }
+  .menu-trigger:before {
+    content: "\f46a";
     left: 0;
     visibility: visible;
     -webkit-transition-delay: 0.1s;
     -moz-transition-delay: 0.1s;
-    transition-delay: 0.1s;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-duration: 0.5s;
-    transition-duration: 0.5s; }
+    transition-delay: 0.1s; }
   .menu-trigger:after {
     content: "\f405";
-    font-family: Ionicons;
-    position: absolute;
-    left: -101px;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-duration: 0.5s;
-    transition-duration: 0.5s; }
+    left: -101px; }
   .menu-trigger:hover, .menu-trigger.hover {
     cursor: pointer; }
   @media only screen and (min-width: 33.125em) {
