--- a/scss/elements/front-page/_front-page.scss
+++ b/scss/elements/front-page/_front-page.scss
@@ -9,6 +9,10 @@
                 @include transform( scale(.89) );
             }
         }
+        footer {
+            position: fixed;
+            bottom: 0;
+        }
     }
 
     .intro-layout {
